--- a/_config.yml
+++ b/_config.yml
@@ -1,46 +1,42 @@
 
-
 # site icon
 favicon: /favicon.png
 
 # author headimg
-headimg: https://imgchr.github.la/steve.jpeg
+headimg: http://img.matosiki.site/avatar.jpg
 # author info
-name: justpsvm
-description: Stay Hungry,Stay Foolish.
+name: 爱学习的野路子
+description: 不积跬步无以至千里.
 
 # search
 search: 
     enable: true
-    placeholder: Enter Key...
+    placeholder: 你想知道什么?
 
 # sidebar
 sidebar: 
   enable: true
   menus:
     -
-      name: Weibo
-      link: http://weibo.com/
-      target: _blank
+      name: 首页
+      link: http://www.matosiki.site/
+      target: _self
 
 # count(统计)
 count:
   enable: true
 
-# comments
-comments:
-  duoshuo_username:  justpsvm
-  #disqus_username: justpsvm
+
 
 # accounts support weibo/github/zhihu/twitter/douban 
 # display to former three
 social: 
   -
     name: weibo
-    link: http://weibo.com/
+    link: https://weibo.com/u/5212711259
   -
     name: github
-    link: https://github.com/
+    link:  https://github.com/wx11055
   -
     name: zhihu
     link: https://www.zhihu.com/
@@ -50,8 +46,3 @@ social:
 #  -
 #    name: douban
 #    link: 
-
-
-
-
-
