--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # site icon
-favicon: http://img.matosiki.site/favicon.png
+favicon: http://img.matosiki.site/favicon.svg
 
 # author headimg
 headimg: http://img.matosiki.site/avatar.jpg
